--- a/app/src/main/res/layout/card_view_device.xml
+++ b/app/src/main/res/layout/card_view_device.xml
@@ -22,7 +22,7 @@
             android:layout_marginBottom="10dp"
             tools:text="Mí celular"
             android:fontFamily="@font/nunito_bold"
-            android:textColor="@color/black100"
+            android:textColor="@color/black"
             android:textSize="20dp" />
 
         <LinearLayout
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/label_device_model"
                 android:fontFamily="@font/opensans_light"
-                android:textColor="@color/black100"
+                android:textColor="@color/black"
                 android:textSize="15dp" />
 
             <TextView
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_light"
                 android:paddingStart="16dp"
-                android:textColor="@color/black100"
+                android:textColor="@color/black"
                 android:textSize="15dp"
                 tools:text="Nexus 5" />
         </LinearLayout>
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/label_imei"
                 android:fontFamily="@font/opensans_light"
-                android:textColor="@color/black100"
+                android:textColor="@color/black"
                 android:textSize="15dp" />
 
             <TextView
@@ -75,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_light"
                 android:paddingStart="16dp"
-                android:textColor="@color/black100"
+                android:textColor="@color/black"
                 android:textSize="15dp"
                 tools:text="1099193543645091" />
 
@@ -94,7 +94,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/label_device_status"
                 android:fontFamily="@font/opensans_light"
-                android:textColor="@color/black100"
+                android:textColor="@color/black"
                 android:textSize="15dp" />
 
             <TextView
@@ -104,7 +104,7 @@
                 android:fontFamily="@font/opensans_light"
                 android:paddingStart="16dp"
                 android:text="@string/text_status_active"
-                android:textColor="@color/black100"
+                android:textColor="@color/black"
                 android:textSize="15dp"
                 tools:text="@string/text_status_active" />
 
