--- a/app/src/main/res/layout/permission_item.xml
+++ b/app/src/main/res/layout/permission_item.xml
@@ -33,7 +33,7 @@
                 android:fontFamily="@font/nunito_bold"
                 android:gravity="center_vertical"
                 android:text="@{permissionFull.permissionType.typeName}"
-                android:textColor="@color/black100"
+                android:textColor="@color/black"
                 android:textSize="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -62,7 +62,7 @@
                 android:layout_marginTop="16dp"
                 android:fontFamily="@font/opensans_light"
                 android:text="Estado: "
-                android:textColor="@color/black100"
+                android:textColor="@color/black"
                 android:textSize="15dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtPermissionType"
@@ -76,7 +76,7 @@
                 android:layout_marginStart="12dp"
                 android:fontFamily="@font/opensans_light"
                 android:text="@{permissionFull.permissionStatus.statusName}"
-                android:textColor="@color/black100"
+                android:textColor="@color/black"
                 android:textSize="15dp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/lblPermissionStatus"
                 app:layout_constraintStart_toEndOf="@+id/lblPermissionStatus"
@@ -195,7 +195,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/opensans_light"
-                android:textColor="@color/black100"
+                android:textColor="@color/black"
                 android:textSize="15dp"
                 android:text="Comentario: "
                 app:layout_constraintStart_toStartOf="parent"
@@ -208,7 +208,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
-                android:textColor="@color/black100"
+                android:textColor="@color/black"
                 android:fontFamily="@font/opensans_light"
                 android:textSize="15dp"
                 app:layout_constraintEnd_toEndOf="parent"
