--- a/app/src/main/res/drawable/border_corner.xml
+++ b/app/src/main/res/drawable/border_corner.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"></solid>
+    <solid android:color="@color/colorPrimary"></solid>
     <stroke
         android:width="0dp"
-        android:color="#424242"></stroke>
+        android:color="@color/colorPrimary"></stroke>
     <corners
         android:topRightRadius="50dp"></corners>
 </shape>
