--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,9 +22,11 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/white"
             android:contentDescription="@string/logo_alt"
+            android:elevation="0dp"
             android:src="@drawable/ic_launcher_camello"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,9 +39,10 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:fontFamily="@font/nunito_bold"
             android:text="@string/app_name"
-            android:textColor="@color/white"
+            android:textColor="@color/colorAccent"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/white_section"
             app:layout_constraintEnd_toEndOf="parent"
@@ -66,6 +69,9 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:autofillHints=""
+                android:backgroundTint="@color/white"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
                 android:fontFamily="@font/opensans_light"
 
                 android:hint="@string/email_hint"
@@ -87,6 +93,9 @@
                 android:layout_marginEnd="16dp"
                 android:autofillHints=""
                 android:fontFamily="@font/opensans_light"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/white"
+                android:textColorHint="@color/white"
 
                 android:hint="@string/password_hint"
                 android:inputType="textPassword"
@@ -104,8 +113,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:fontFamily="@font/nunito_bold"
-                android:text="@string/welcome"
-                android:textColor="@color/black100"
+                android:text="@string/init_session_label"
+                android:textColor="@color/white"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/loginButton"
@@ -120,8 +129,9 @@
                 android:layout_below="@+id/txtBienvenido"
                 android:layout_marginStart="16dp"
                 android:fontFamily="@font/opensans_light"
-                android:text="@string/init_session_label"
-                android:textColor="@color/black100"
+
+                android:text="@string/welcome"
+                android:textColor="@color/white"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtBienvenido" />
