--- a/app/src/main/res/layout/calendar_day_layout.xml
+++ b/app/src/main/res/layout/calendar_day_layout.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:background="@color/black100">
+    tools:background="@color/black">
 
     <TextView
         android:id="@+id/calendarDayNameText"
@@ -14,7 +14,7 @@
         android:textSize="12sp"
         android:layout_marginBottom="10dp"
         android:textColor="@android:color/white"
-        tools:text="dom"/>
+        tools:text="dom" />
 
     <TextView
         android:id="@+id/calendarDayText"
