--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,7 +29,7 @@
 
     <style name="titles">
         <item name="android:fontFamily">@font/nunito_bold</item>
-        <item name="android:textColor">@color/black100</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:textSize">20dp</item>
     </style>
 
