Fixed styles in login activity. Also add a new png

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,8 @@
             android:background="@color/white"
             android:contentDescription="@string/logo_alt"
             android:elevation="0dp"
-            android:src="@drawable/ic_launcher_camello"
+            android:adjustViewBounds="false"
+            android:src="@mipmap/ic_launcher_camello"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -40,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:fontFamily="@font/nunito_bold"
+            android:fontFamily="@font/comfortaa"
             android:text="@string/app_name"
             android:textColor="@color/colorAccent"
             android:textSize="30sp"
@@ -70,13 +71,16 @@
                 android:layout_marginEnd="16dp"
                 android:autofillHints=""
                 android:backgroundTint="@color/white"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
                 android:fontFamily="@font/opensans_light"
-
                 android:hint="@string/email_hint"
                 android:inputType="textWebEmailAddress"
+
                 android:paddingBottom="20dp"
+                android:textColor="@android:color/white"
+                android:textColorHighlight="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textColorLink="@color/white"
+                android:textCursorDrawable="@drawable/text_cursor_login"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/password"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -92,14 +96,16 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:autofillHints=""
-                android:fontFamily="@font/opensans_light"
                 android:backgroundTint="@color/white"
-                android:textColor="@color/white"
-                android:textColorHint="@color/white"
-
+                android:fontFamily="@font/opensans_light"
                 android:hint="@string/password_hint"
                 android:inputType="textPassword"
+
                 android:paddingBottom="20dp"
+                android:textColor="@android:color/white"
+                android:textColorHint="@android:color/white"
+                android:textColorLink="@android:color/white"
+                android:textCursorDrawable="@drawable/text_cursor_login"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/loginButton"
                 app:layout_constraintEnd_toEndOf="parent"
