--- a/app/src/main/res/drawable-mdpi/splash.xml
+++ b/app/src/main/res/drawable-mdpi/splash.xml
@@ -3,7 +3,7 @@
 
     android:opacity="opaque">
     <!-- The background color, preferably the same as your normal theme -->
-    <item android:drawable="@color/darkBlue" />
+    <item android:drawable="@color/white" />
     <!-- Your product logo - 144dp color version of your app icon -->
     <item>
 
