--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,11 +16,19 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="NumberPickerTheme" parent="Theme.AppCompat.Light">
+        <item name="colorAccent">@color/white</item>
+
+        <!--        <item name="colorControlNormal">@android:color/transparent</item>-->
+
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="background">@android:color/white</item>
+        <item name="android:textSize">17sp</item>
+    </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
 
 
     <style name="SplashTheme" parent="AppTheme">
