--- a/app/src/main/res/layout/dialog_time_picker_custom.xml
+++ b/app/src/main/res/layout/dialog_time_picker_custom.xml
@@ -15,12 +15,12 @@
 
     <NumberPicker
         android:id="@+id/number_picker_hour"
-        android:theme="@style/NumberPickerTheme"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="90dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:gravity="center"
+        android:theme="@style/NumberPickerTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintHorizontal_bias="0.0"
@@ -31,10 +31,11 @@
     <NumberPicker
         android:id="@+id/number_picker_minute"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="90dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:gravity="center"
+        android:theme="@style/NumberPickerTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/radioGroup2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -43,18 +44,19 @@
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/textView5"
-        style="@style/TextAppearance.MaterialComponents.Headline1"
+        style="@style/TextAppearance.MaterialComponents.Headline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
         android:layout_marginEnd="2dp"
+        android:layout_marginBottom="20dp"
         android:gravity="center"
         android:text=":"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/number_picker_minute"
         app:layout_constraintEnd_toStartOf="@+id/number_picker_minute"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/number_picker_hour"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/number_picker_minute" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/radioGroup2"
