--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,13 +16,13 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="NumberPickerTheme" parent="Theme.AppCompat.Light">
+    <style name="NumberPickerTheme" parent="Theme.MaterialComponents.Light">
         <item name="colorAccent">@color/white</item>
 
         <!--        <item name="colorControlNormal">@android:color/transparent</item>-->
-
+        <item name="background">@drawable/square_button</item>
         <item name="android:textColorPrimary">@android:color/black</item>
-        <item name="background">@android:color/white</item>
+
         <item name="android:textSize">17sp</item>
     </style>
 
