--- a/app/src/main/res/layout/fragment_web_view.xml
+++ b/app/src/main/res/layout/fragment_web_view.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent">
 
         <WebView
-            android:id="@+id/web_view_privacy_policy"
+            android:id="@+id/web_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
