--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,6 +41,10 @@
         <item name="android:textSize">20dp</item>
     </style>
 
+    <style name="Custom.Body2" parent="TextAppearance.MaterialComponents.Body2">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
 
 </resources>
 
