--- a/app/src/main/res/layout/dialog_success.xml
+++ b/app/src/main/res/layout/dialog_success.xml
@@ -26,9 +26,11 @@
 
 
         <TextView
+            android:id="@+id/dialog_success_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
             android:text="@string/success" />
 
 
